Fix dark mode looking jank

--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -12,8 +12,10 @@
 /* Dark Mode Styles */
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a; /* Dark mode background */
-    --foreground: #ededed; /* Dark mode text color */
+    --background: #ffffff;
+      /* Light mode background */
+      --foreground: #171717;
+      /* Light mode text color */
   }
 }
 
